--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -15,7 +15,7 @@ server {
   listen      80;
   server_name forstream;
   location / {
-    return 301 https://www.forstream$request_uri;
+    return 301 https://www.forstream.io$request_uri;
   }
   location /.well-known/acme-challenge {
     root  /data/letsencrypt;
@@ -27,7 +27,7 @@ server {
   listen      80;
   server_name ~^(?<subdomain>.+)\.vamu\.la$;
   location / {
-    return 301 https://$subdomain.forstream$request_uri;
+    return 301 https://$subdomain.forstream.io$request_uri;
   }
   location /.well-known/acme-challenge {
     root  /data/letsencrypt;
@@ -37,7 +37,7 @@ server {
 
 server {
   listen              443 ssl;
-  server_name         forstream;
+  server_name         forstream.io;
   ssl_certificate     /etc/letsencrypt/live/forstream/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/forstream/privkey.pem;
   return              301 https://www.forstream$request_uri;
@@ -45,7 +45,7 @@ server {
 
 server {
   listen              443 ssl;
-  server_name         www.forstream;
+  server_name         www.forstream.io;
   ssl_certificate     /etc/letsencrypt/live/www.forstream/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/www.forstream/privkey.pem;
   location / {
@@ -55,7 +55,7 @@ server {
 
 server {
   listen               443 ssl;
-  server_name          api.forstream;
+  server_name          api.forstream.io;
   ssl_certificate      /etc/letsencrypt/live/api.forstream/fullchain.pem;
   ssl_certificate_key  /etc/letsencrypt/live/api.forstream/privkey.pem;
   client_max_body_size 10M;
