--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -25,7 +25,7 @@ server {
 
 server {
   listen      80;
-  server_name ~^(?<subdomain>.+)\.vamu\.la$;
+  server_name ~^(?<subdomain>.+)\.forstream\.io$;
   location / {
     return 301 https://$subdomain.forstream.io$request_uri;
   }
