--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -10,8 +10,8 @@ upstream forstream {
 server {
   listen               443 ssl;
   server_name          api.forstream.io;
-  ssl_certificate      /etc/letsencrypt/live/api.forstream/fullchain.pem;
-  ssl_certificate_key  /etc/letsencrypt/live/api.forstream/privkey.pem;
+  ssl_certificate      /etc/letsencrypt/live/api.forstream.io/fullchain.pem;
+  ssl_certificate_key  /etc/letsencrypt/live/api.forstream.io/privkey.pem;
   client_max_body_size 10M;
   location / {
     proxy_pass http://forstream;
