--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -7,6 +7,53 @@ upstream forstream {
   server forstream:3000;
 }
 
+upstream forstream-web {
+  server forstream-web:4000;
+}
+
+server {
+  listen      80;
+  server_name forstream.io;
+  location / {
+    return 301 https://www.forstream.io$request_uri;
+  }
+  location /.well-known/acme-challenge {
+    root  /data/letsencrypt;
+    allow all;
+  }
+}
+
+server {
+  listen      80;
+  server_name ~^(?<subdomain>.+)\.forstream\.io$;
+  location / {
+    return 301 https://$subdomain.forstream.io$request_uri;
+  }
+  location /.well-known/acme-challenge {
+    root  /data/letsencrypt;
+    allow all;
+  }
+}
+
+
+server {
+  listen              443 ssl;
+  server_name         forstream.io;
+  ssl_certificate     /etc/letsencrypt/live/forstream.io/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/forstream.io/privkey.pem;
+  return              301 https://www.forstream$request_uri;
+}
+
+server {
+  listen              443 ssl;
+  server_name         www.forstream.io;
+  ssl_certificate     /etc/letsencrypt/live/www.forstream.io/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/www.forstream.io/privkey.pem;
+  location / {
+    proxy_pass http://forstream-web;
+  }
+}
+
 server {
   listen               443 ssl;
   server_name          api.forstream.io;
