Fixing nginx redirect

--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -41,7 +41,7 @@ server {
   server_name         forstream.io;
   ssl_certificate     /etc/letsencrypt/live/forstream.io/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/forstream.io/privkey.pem;
-  return              301 https://www.forstream$request_uri;
+  return              301 https://www.forstream.io$request_uri;
 }
 
 server {
