--- a/server/docker/forstream-live/docker-compose.yml
+++ b/server/docker/forstream-live/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: "forstream-live"
     volumes:
       - "${FORSTREAM_HOME}/configs/forstream-live.yml:/usr/src/forstream-live/configs.yml"
+  ports:
+      - "1935:1935"
 networks:
   default:
     external:
