--- a/server/docker/nginx/default.conf
+++ b/server/docker/nginx/default.conf
@@ -3,6 +3,8 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-NginX-Proxy true;
 proxy_set_header Host $http_host;
 
+proxy_pass_request_headers on;
+
 upstream forstream {
   server forstream:3000;
 }
